tests/invalid/invalid-002.inox
Module Invalid002

Main() :
    if 123 :
        PutLn("error")
    ;
;
